fix alignment of thumbnails and images when less than 4 images.

--- a/src/components/gallery/gallery.css
+++ b/src/components/gallery/gallery.css
@@ -152,7 +152,7 @@
 
 /* Gallery Thumbnails */
 .gallery-thumbnails {
-  max-width: 320px;
+  width: 320px;
   height: 100%;
   margin-left: 20px;
   flex-shrink: 2;
